--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
-  sqflite: ^2.0.0+3
+  sqflite: ^2.3.0
+  flutter_bloc: ^8.1.5
+  equatable: ^2.0.5
 
 
 # For information on the generic Dart part of this file, see the
